--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
                     porque do homem foi tirada".
                     
                     24 - Por essa razão, o homem deixará pai e mãe e se unirá à sua mulher, e eles se tornarão uma só carne. <br>
-                    Gênesis. 2: 23-24
+                    Gênesis. 2: 23-24.
                 </p>
             </div>
     </header>
